--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -13,6 +13,6 @@
     <li>@Html.ActionLink($"{stylist.Name}", "Details", new {id = stylist.StylistId})</li>
   }
 </ol>
-@Html.ActionLink("Add New Stylist", "Create", new { area = "" }, new { @class = "btn btn-dark"  }) 
+@Html.ActionLink("Add New Stylist", "Create", new { area = "" }, new { @class = "btn btn-secondary"  }) 
 <p>@Html.ActionLink("Add New Stylist", "Create")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
