--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,3 +1,6 @@
+@{
+  Layout = "_Layout";
+} 
 <h1>Eau Claire's Client Management</h1>
 <a href='./Stylists/Index'><button type="button" class="btn btn-secondary" style="width:150px">See all stylists</button></a><br><br>
 
