--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,3 +1,6 @@
+@{
+  Layout = "_Layout";
+} 
 @using HairSalon.Models;
 
 <h1>Stylists</h1>
@@ -14,5 +17,4 @@
   }
 </ol>
 @Html.ActionLink("Add New Stylist", "Create", new { area = "" }, new { @class = "btn btn-secondary"  }) 
-<p>@Html.ActionLink("Add New Stylist", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "btn btn-secondary"  })
