--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -16,3 +16,4 @@
   <li>@Html.ActionLink($"{client.ClientName}", "Details", new {id = client.ClientId})| @client.Stylist.Name</li>
 }
 @Html.ActionLink("Add new client", "Create", new { area = "" }, new { @class = "btn btn-secondary" })
+@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "btn btn-secondary"  })
