--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -10,4 +10,4 @@
 @Html.ActionLink("Back to Stylists", "Index", null, null, new { @class = "btn btn-secondary"  })
 @Html.ActionLink("Edit Stylist", "Edit", new { id = Model.StylistId}, new { @class = "btn btn-secondary"  })
 @Html.ActionLink("Delete Stylist", "Delete", new { id = Model.StylistId}, new { @class = "btn btn-secondary"  })
-<a href='./Clients/Index'><button type="button" class="btn btn-secondary" style="width:150px">See all clients</button></a>
+<a href='../../Clients/Index'><button type="button" class="btn btn-secondary" style="width:150px">See all clients</button></a>
