--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -4,10 +4,12 @@
 
 @model HairSalon.Models.Client
 
-<h2>Add a new Client</h2>
-
+<h2>Edit Client Infromation</h2>
+<h4>Edit this client: @Html.DisplayFor(model => model.ClientName)</h4>
 @using (Html.BeginForm())
 {
+  @Html.HiddenFor(model => model.ClientId)
+
   @Html.LabelFor(model => model.ClientName)
   @Html.TextBoxFor(model => model.ClientName)
 
@@ -16,10 +18,10 @@
 
   @Html.LabelFor(model => model.Address)
   @Html.TextBoxFor(model => model.Address)
-
+  
   @Html.LabelFor(model => model.Stylist)
   @Html.DropDownList("StylistId")
   
-  <button type="submit" class="btn btn-primary" style="width:250px">Add New Client</button>
+  <button type="submit" value="save" class="btn btn-primary" style="width:250px">Edit Client</button>
 }
-<p>@Html.ActionLink("Show all clients", "Index")</p>
+<p>@Html.ActionLink("Back to list", "Index")</p>
