--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -16,12 +16,12 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home
+          <a class="nav-link active" href="/">Home
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Stylists/Index">Stylists</a>
+          <a class="nav-link" href="../../Stylists/Index">Stylists</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
