--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -10,11 +10,17 @@
   <h3>No stylists have been added yet!</h3>
 }
 
-<ol>
+<table class="table table-hover">
+    <tbody>
   @foreach(Stylist stylist in Model)
   {
-    <li>@Html.ActionLink($"{stylist.Name}", "Details", new {id = stylist.StylistId})</li>
+    <tr class="table-active">
+      <td>
+      @Html.ActionLink($"{stylist.Name}", "Details", new {id = stylist.StylistId})
+      </td>
+    </tr>
   }
-</ol>
+    </tbody>
+</table>
 @Html.ActionLink("Add New Stylist", "Create", new { area = "" }, new { @class = "btn btn-secondary"  }) 
 @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "btn btn-secondary"  })
