--- a/HairSalon/Views/Clients/Delete.cshtml
+++ b/HairSalon/Views/Clients/Delete.cshtml
@@ -10,6 +10,6 @@
 
 @using (Html.BeginForm())
 {
-  <button type="submit" value="delete" class="btn btn-primary" style="width:250px">Delete Client</button>
+  <button type="submit" value="delete" class="btn btn-secondary" style="width:250px">Delete Client</button>
 }
 @Html.ActionLink("Back to List", "Index")
