--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -33,10 +33,9 @@
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="../Stylists/Create">Add a Stylist</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="../Clients/Create">Add Clients</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+            <a class="dropdown-item" href="#">Contact us</a>
           </div>
         </li>
       </ul>
