Add see clients button to the home page and update search bar

--- a/HairSalon/Views/Shared/_Layout.cshtml
+++ b/HairSalon/Views/Shared/_Layout.cshtml
@@ -39,11 +39,10 @@
           </div>
         </li>
       </ul>
-        @using (Html.BeginForm("Index", "Index", FormMethod.Get))
-        {
-          @Html.TextBox("search")
-          <input type="submit" value="search" class="search-button" />
-        }
+      <form class="d-flex">
+        <input class="form-control me-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
   </div>
 </nav>
