--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -3,3 +3,4 @@
 } 
 <h1 class="my-5">Eau Claire's Client Management</h1>
 <a href='./Stylists/Index'><button type="button" class="btn btn-secondary" style="width:150px">See all stylists</button></a>
+<a href='./Clients/Index'><button type="button" class="btn btn-secondary" style="width:150px">See all clients</button></a>
